c/src/test/resources/c/nec_inline_bnc/valid/ex22-50.ctrl
<controlFile>
  <sourceFile name="../ex22.c" id="1" />
  <run>
    <startPosition fileId="1" line="31" />
    <wayPoint fileId="1" line="34" >
      <function funcName="foo" >
        <wayPoint fileId="1" line="16" >
          <function funcName="check" >
            <wayPoint fileId="1" line="3" />
          </function>
        </wayPoint>
        <wayPoint fileId="1" line="17" />
      </function>
    </wayPoint>
    <wayPoint fileId="1" line="35" >
      <function funcName="foo" >
        <wayPoint fileId="1" line="19" >
          <function funcName="check" >
            <wayPoint fileId="1" line="3" />
          </function>
        </wayPoint>
        <wayPoint fileId="1" line="20" />
      </function>
    </wayPoint>
    <wayPoint fileId="1" line="36" >
      <function funcName="foo" >
        <wayPoint fileId="1" line="22" >
          <loop iterTimes="50" />
        </wayPoint>
      </function>
    </wayPoint>
    <wayPoint fileId="1" line="37" >
      <function funcName="foo" >
        <wayPoint fileId="1" line="22" >
          <loop iterTimes="20" />
        </wayPoint>
      </function>
    </wayPoint>
    <endPosition fileId="1" line="38" />
  </run>
</controlFile>