c/src/test/resources/c/nec_inline_bnc/invalid/ex12-10.ctrl
<controlFile>
  <sourceFile name="../ex12.c" id="1" />
  <run>
    <startPosition fileId="1" line="4" />
    <wayPoint fileId="1" line="16" >
      <loop iterTimes="10" />
    </wayPoint>
    <endPosition fileId="1" line="21" />
  </run>
</controlFile>